--Update to previous commit, Ordinacija.Common project

--- a/Ordinacija.Common/Ordinacija.Common.csproj
+++ b/Ordinacija.Common/Ordinacija.Common.csproj
@@ -43,5 +43,75 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Icons\PNG\Add.png" />
+    <Content Include="Resources\Icons\PNG\AddBlue.png" />
+    <Content Include="Resources\Icons\PNG\Advence Search.png" />
+    <Content Include="Resources\Icons\PNG\Advence SearchBlue.png" />
+    <Content Include="Resources\Icons\PNG\Duplicate.png" />
+    <Content Include="Resources\Icons\PNG\DuplicateBlue.png" />
+    <Content Include="Resources\Icons\PNG\Folder - Add.png" />
+    <Content Include="Resources\Icons\PNG\Folder - AddBlue.png" />
+    <Content Include="Resources\Icons\PNG\Folder - AddWhite.png" />
+    <Content Include="Resources\Icons\PNG\Folder - Closed.png" />
+    <Content Include="Resources\Icons\PNG\Folder - ClosedBlue.png" />
+    <Content Include="Resources\Icons\PNG\Folder - ClosedWhite.png" />
+    <Content Include="Resources\Icons\PNG\Folder - Open .png" />
+    <Content Include="Resources\Icons\PNG\Folder - OpenBlue.png" />
+    <Content Include="Resources\Icons\PNG\Folder - OpenWihte.png" />
+    <Content Include="Resources\Icons\PNG\Group - Add.png" />
+    <Content Include="Resources\Icons\PNG\Group - AddBlue.png" />
+    <Content Include="Resources\Icons\PNG\Group - AddWhite.png" />
+    <Content Include="Resources\Icons\PNG\Group.png" />
+    <Content Include="Resources\Icons\PNG\GroupBlue.png" />
+    <Content Include="Resources\Icons\PNG\Home.png" />
+    <Content Include="Resources\Icons\PNG\HomeBlue.png" />
+    <Content Include="Resources\Icons\PNG\Info.png" />
+    <Content Include="Resources\Icons\PNG\InfoBlue.png" />
+    <Content Include="Resources\Icons\PNG\Options.png" />
+    <Content Include="Resources\Icons\PNG\OptionsBlue.png" />
+    <Content Include="Resources\Icons\PNG\Patient - Add.png" />
+    <Content Include="Resources\Icons\PNG\Patient - AddBlue.png" />
+    <Content Include="Resources\Icons\PNG\Patient - AddWhite.png" />
+    <Content Include="Resources\Icons\PNG\Patient - Remove.png" />
+    <Content Include="Resources\Icons\PNG\Patient - RemoveBlue.png" />
+    <Content Include="Resources\Icons\PNG\Patient - RemoveWhite.png" />
+    <Content Include="Resources\Icons\PNG\Patient - Update.png" />
+    <Content Include="Resources\Icons\PNG\Patient - UpdateBlue.png" />
+    <Content Include="Resources\Icons\PNG\Patient - UpdateWhite.png" />
+    <Content Include="Resources\Icons\PNG\Patient.png" />
+    <Content Include="Resources\Icons\PNG\PatientBlue.png" />
+    <Content Include="Resources\Icons\PNG\Photos.png" />
+    <Content Include="Resources\Icons\PNG\PhotosBlue.png" />
+    <Content Include="Resources\Icons\PNG\PhotosWhite.png" />
+    <Content Include="Resources\Icons\PNG\Search.png" />
+    <Content Include="Resources\Icons\PNG\SearchBlue.png" />
+    <Content Include="Resources\Icons\PNG\Settings.png" />
+    <Content Include="Resources\Icons\PNG\SettingsBlue.png" />
+    <Content Include="Resources\Icons\SVG\Add.svg" />
+    <Content Include="Resources\Icons\SVG\Advence-SearchBlue.svg" />
+    <Content Include="Resources\Icons\SVG\Delete.svg" />
+    <Content Include="Resources\Icons\SVG\Edit.svg" />
+    <Content Include="Resources\Icons\SVG\Female.svg" />
+    <Content Include="Resources\Icons\SVG\Folder-Add.svg" />
+    <Content Include="Resources\Icons\SVG\Folder-Closed.svg" />
+    <Content Include="Resources\Icons\SVG\Folder-Open-.svg" />
+    <Content Include="Resources\Icons\SVG\GroupBlue.svg" />
+    <Content Include="Resources\Icons\SVG\GroupBlue.svg.2021_07_01_21_27_13.0.svg" />
+    <Content Include="Resources\Icons\SVG\HomeBlue.svg" />
+    <Content Include="Resources\Icons\SVG\InfoBlue.svg" />
+    <Content Include="Resources\Icons\SVG\Male.svg" />
+    <Content Include="Resources\Icons\SVG\New-Service.svg" />
+    <Content Include="Resources\Icons\SVG\Open.svg" />
+    <Content Include="Resources\Icons\SVG\Options.svg" />
+    <Content Include="Resources\Icons\SVG\OptionsBlue.svg" />
+    <Content Include="Resources\Icons\SVG\Patient-AddBlue.svg" />
+    <Content Include="Resources\Icons\SVG\PhotosBlue.svg" />
+    <Content Include="Resources\Icons\SVG\PhotosBlue1.svg" />
+    <Content Include="Resources\Icons\SVG\SearchBlue.svg" />
+    <Content Include="Resources\Icons\SVG\Services.svg" />
+    <Content Include="Resources\Icons\SVG\SettingsBlue.svg" />
+    <Content Include="Resources\Icons\SVG\Sort.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
